--- a/css/layout.css
+++ b/css/layout.css
@@ -2,11 +2,7 @@ body {
     margin: 0 auto;
     font-family: 'Noto Sans', sans-serif;
     letter-spacing: -.02em;
-    background-color: #f4f5ff7d;
-    background: radial-gradient(circle at top left, transparent 25%, #f5f5ff 25.5%, #f5f5ff 36%, transparent 37%, transparent 100%), radial-gradient(circle at bottom right, transparent 34%, #f5f5ff 34.5%, #f5f5ff 45.5%, transparent 46%, transparent 100%);
-    background-size: 3em 3em;
-    background-color: #f1f1ff;
-    opacity: 1;
+    background-color: #f8f8ff;
     position: relative;
     height: 100vh;
 }
@@ -24,7 +20,7 @@ div.container {
 }
 
 div.portfolio .nome {
-    color: #efba58;
+    color: #D9AA1E;
     text-transform: uppercase;
     font-size: 9pt;
     font-weight: 800;
@@ -44,20 +40,28 @@ div.container {
     margin: auto;
 }
 
+main {
+    padding-bottom: 60px;
+}
+
 header {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    padding: 30px 10px;
+    gap: 15px;
     color: #212851;
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin: 30px auto;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 header .foto-info {
     display: flex;
+    width: 100%;
     gap: 10px;
+    justify-content: center;
 }
 
 header .foto {
@@ -65,7 +69,7 @@ header .foto {
     height: auto;
     border-radius: 50%;
     overflow: hidden;
-    border: 2px solid #3b49a438;
+    border: 1px solid #3b49a438;
 }
 
 header .foto img {
@@ -94,7 +98,7 @@ header .info h1 {
 
 header .info p {
     font-weight: 500;
-    font-size: 10pt;
+    font-size: 8.5pt;
     margin-bottom: 5px;
     text-wrap: balance;
 }
@@ -111,22 +115,27 @@ header .detalhes span {
     text-transform: uppercase;
     background-size: contain;
     background-repeat: no-repeat;
-    padding-left: 20px;
-    color: #767da2;
+    padding-left: 17px;
+    color: #434c7a;
 
+}
+
+header .detalhes a {
+    text-decoration: none;
+    display: inline-flex;
 }
 
 span.onde {
-    background-image: url('data:image/svg+xml;utf8,<svg data-slot="icon" fill="none" stroke-width="2.5" stroke="%233b49a4" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"></path><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"></path></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg data-slot="icon" fill="none" stroke-width="1.5" stroke="%233b49a4" viewBox="0 0 22 25" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"></path><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"></path></svg>');
 }
 
 span.whatsapp {
-    background-image: url('data:image/svg+xml;utf8,<svg data-slot="icon" fill="%21ec435" stroke-width="1" stroke="%231ec435" viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" d="M19.11 17.205c-.372 0-1.088 1.39-1.518 1.39a.63.63 0 0 1-.315-.1c-.802-.402-1.504-.817-2.163-1.447-.545-.516-1.146-1.29-1.46-1.963a.426.426 0 0 1-.073-.215c0-.33.99-.945.99-1.49 0-.143-.73-2.09-.832-2.335-.143-.372-.214-.487-.6-.487-.187 0-.36-.043-.53-.043-.302 0-.53.115-.746.315-.688.645-1.032 1.318-1.06 2.264v.114c-.015.99.472 1.977 1.017 2.78 1.23 1.82 2.506 3.41 4.554 4.34.616.287 2.035.888 2.722.888.817 0 2.15-.515 2.478-1.318.13-.33.244-.73.244-1.088 0-.058 0-.144-.03-.215-.1-.172-2.434-1.39-2.678-1.39zm-2.908 7.593c-1.747 0-3.48-.53-4.942-1.49L7.793 24.41l1.132-3.337a8.955 8.955 0 0 1-1.72-5.272c0-4.955 4.04-8.995 8.997-8.995S25.2 10.845 25.2 15.8c0 4.958-4.04 8.998-8.998 8.998zm0-19.798c-5.96 0-10.8 4.842-10.8 10.8 0 1.964.53 3.898 1.546 5.574L5 27.176l5.974-1.92a10.807 10.807 0 0 0 16.03-9.455c0-5.958-4.842-10.8-10.802-10.8z"></path></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg data-slot="icon" fill="%23269114" stroke-width="1" stroke="none" viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" d="M19.11 17.205c-.372 0-1.088 1.39-1.518 1.39a.63.63 0 0 1-.315-.1c-.802-.402-1.504-.817-2.163-1.447-.545-.516-1.146-1.29-1.46-1.963a.426.426 0 0 1-.073-.215c0-.33.99-.945.99-1.49 0-.143-.73-2.09-.832-2.335-.143-.372-.214-.487-.6-.487-.187 0-.36-.043-.53-.043-.302 0-.53.115-.746.315-.688.645-1.032 1.318-1.06 2.264v.114c-.015.99.472 1.977 1.017 2.78 1.23 1.82 2.506 3.41 4.554 4.34.616.287 2.035.888 2.722.888.817 0 2.15-.515 2.478-1.318.13-.33.244-.73.244-1.088 0-.058 0-.144-.03-.215-.1-.172-2.434-1.39-2.678-1.39zm-2.908 7.593c-1.747 0-3.48-.53-4.942-1.49L7.793 24.41l1.132-3.337a8.955 8.955 0 0 1-1.72-5.272c0-4.955 4.04-8.995 8.997-8.995S25.2 10.845 25.2 15.8c0 4.958-4.04 8.998-8.998 8.998zm0-19.798c-5.96 0-10.8 4.842-10.8 10.8 0 1.964.53 3.898 1.546 5.574L5 27.176l5.974-1.92a10.807 10.807 0 0 0 16.03-9.455c0-5.958-4.842-10.8-10.802-10.8z"></path></svg>');
     cursor: pointer;
 }
 
 span.email {
-    background-image: url('data:image/svg+xml;utf8,<svg data-slot="icon" fill="%23e10303" stroke-width=".7" stroke="%23e10303" viewBox="0 0 21 18" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"></path></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg data-slot="icon" fill="%23e10303" stroke-width=".7" stroke="none" viewBox="0 0 21 18" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"></path></svg>');
     cursor: pointer;
 }
 
@@ -137,7 +146,6 @@ span.email:hover {
 
 div.flex {
     display: flex;
-    border-top: 1px dotted #3b49a438;
     width: 100%;
     gap: 2px;
     margin: auto;
@@ -145,18 +153,17 @@ div.flex {
 
 div.sobre {
     width: 100%;
-    padding: 10px 0;
+    padding-bottom: 10px;
     text-align: center;
     color: #434c7a;
     font-weight: 700;
-    margin-bottom: 10px;
     text-transform: uppercase;
     letter-spacing: .1em;
     font-size: 8pt;
 }
 
 div.sobre span {
-    background-color: #b6b9f527;
+    background-color: #e0e1f9;
     width: 100%;
     border-radius: 2px;
     display: block;
@@ -166,11 +173,12 @@ div.sobre span {
 }
 
 div.sobre span:hover {
-    background-color: #b6b9f572;
+    background-color: #959bff;
+    color: #fff;
 }
 
 div.sobre span.active {
-    background-color: #efba58;
+    background-color: #D9AA1E;
     transition: background-color 500ms ease;
     color: #212851;
 }
@@ -203,7 +211,7 @@ div.trabalhos .single::after {
 }
 
 div.trabalhos .single:hover::after {
-    background-color: #efba5843;
+    background-color: #D9AA1E43;
     opacity: 1;
 }
 
@@ -246,7 +254,7 @@ div.lightbox .sobreTrabalho {
 }
 
 div.lightbox .sobreTrabalho .tipo {
-    background-color: #efba58;
+    background-color: #D9AA1E;
     color: #212851;
     width: fit-content;
     border-radius: 5px;
@@ -289,16 +297,52 @@ div.lightbox .sobreTrabalho .rodapeLightbox {
     bottom: 20px;
 }
 
+div.lightbox .fechar {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke-width='3' stroke='%23fff' viewBox='0 0 24 24' aria-hidden='true'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M6 18 18 6M6 6l12 12'%3E%3C/path%3E%3C/svg%3E");
+  }
+
 footer {
     position: fixed;
+    pointer-events: none;
     font-size: 8pt;
     bottom: 0;
-    padding: 10px;
+    padding: 5px 0;
     width: 100%;
-    background-color: #f5f5ffe7;
+    background-color: #e0e1f9f2;
 }
 
 footer div {
     text-align: center;
     color: #212851;
+}
+
+@media (max-width:900px) {
+    div.lightbox {
+        flex-direction: column;
+    }
+    div.lightbox img {
+        max-width: 90% !important;
+        border-radius: 5px 5px 0 0;
+    }
+    div.lightbox .sobreTrabalho {
+        max-width: 100% !important;
+        padding: 10px 15px !important;
+        gap: 5px !important;
+        border-radius: 0 0 5px 5px !important;
+    }
+    div.lightbox .sobreTrabalho h2 {
+        margin-top: 10px !important;
+    }
+    div.lightbox .sobreTrabalho .rodapeLightbox {
+        position: relative !important;
+        bottom: 0 !important;
+        padding: 10px 0 0 0 !important;
+        margin-top: 10px;
+    }
 }
